--- a/index.html
+++ b/index.html
@@ -8,15 +8,35 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <!-- Axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js" integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- CCS -->
     <link rel="stylesheet" href="css/style.css">
     <title>Dischi</title>
 </head>
 <body>
     <div id="app">
-
+        <header>
+            <img class="img-fluid" id="logo" src="img/spotify-logo.png" alt="Spotify Logo">
+        </header>
+        <main>
+            <div class="container">
+                <div class="row row-cols-lg-5 g-3">
+                    <div v-for="album in albumArray" class="col-12 col-md-4 col-lg">
+                        <div class="album_card text-center">
+                            <img class="img-fluid" :src="album.poster">
+                            <h2 class="text-white text-uppercase">{{album.title}}</h2>
+                            <h5>{{album.author}}</h5>
+                            <small>{{album.year}}</small>
+                        </div>
+                    </div>
+                  </div>
+            </div>
+        </main>
     </div>
     <!-- JS -->
     <script src="js/main.js"></script>
+    <!-- Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
